--- a/package.json
+++ b/package.json
@@ -17,13 +17,20 @@
   },
   "homepage": "https://github.com/velascoDev/portfolio_v2#readme",
   "devDependencies": {
+    "babelify": "^7.3.0",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
+    "browserify": "^14.4.0",
     "express": "^4.15.3",
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.4.2",
+    "gulp-import-css": "^0.1.3",
+    "gulp-livereload": "^3.8.1",
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
     "nodemailer": "^4.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "pug": "^2.0.0-rc.2"
