--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-clean-css": "^3.4.2",
     "gulp-import-css": "^0.1.3",
     "gulp-livereload": "^3.8.1",
+    "gulp-sass": "^3.1.0",
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
     "nodemailer": "^4.0.1",
