--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/velascoDev/portfolio_v2#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
