--- a/package.json
+++ b/package.json
@@ -27,14 +27,18 @@
     "gulp-clean-css": "^3.4.2",
     "gulp-import-css": "^0.1.3",
     "gulp-livereload": "^3.8.1",
+    "gulp-minify": "^1.0.0",
     "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0",
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
     "nodemailer": "^4.0.1",
     "path": "^0.12.7",
+    "pump": "^1.0.2",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "clean-css-cli": "^4.1.5",
     "pug": "^2.0.0-rc.2"
   }
 }
