--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "type": "git",
     "url": "git+https://github.com/velascoDev/portfolio_v2.git"
   },
+  "engines": {
+    "node": "8.0.0",
+    "npm": "2.1.x",
+  },
   "author": "Eduardo J. Velasco",
   "license": "MIT",
   "bugs": {
