--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "bugs": {
 	"url": "https://github.com/velascoDev/portfolio_v2/issues"
   },
+  "engines": {
+  	"node": "8.0.0", 
+  	"npm": "5.0.3"
+  },
   "homepage": "https://github.com/velascoDev/portfolio_v2#readme",
   "devDependencies": {
 	"babel-preset-es2015": "^6.24.1",
