--- a/package.json
+++ b/package.json
@@ -1,49 +1,49 @@
 {
-  "name": "portfolio_v2",
-  "version": "1.0.0",
-  "description": "Personal space of Eduardo Velasco",
-  "main": "server.js",
-  "scripts": {
-	"test": "echo \"Error: no test specified\" && exit 1", 
-	"start": "npm install"
-  },
-  "repository": {
-	"type": "git",
-	"url": "git+https://github.com/velascoDev/portfolio_v2.git"
-  },
-  "author": "Eduardo J. Velasco",
-  "license": "MIT",
-  "bugs": {
-	"url": "https://github.com/velascoDev/portfolio_v2/issues"
-  },
-  "engines": {
-  	"node": "8.0.0", 
-  	"npm": "5.0.3"
-  },
-  "homepage": "https://github.com/velascoDev/portfolio_v2#readme",
-  "devDependencies": {
-	"babel-preset-es2015": "^6.24.1",
-	"babelify": "^7.3.0",
-	"body-parser": "^1.17.2",
-	"bootstrap": "^3.3.7",
-	"browserify": "^14.4.0",
-	"express": "^4.15.3",
-	"gulp": "^3.9.1",
-	"gulp-clean-css": "^3.4.2",
-	"gulp-import-css": "^0.1.3",
-	"gulp-livereload": "^3.8.1",
-	"gulp-minify": "^1.0.0",
-	"gulp-sass": "^3.1.0",
-	"gulp-uglify": "^3.0.0",
-	"jquery": "^3.2.1",
-	"jquery-ui": "^1.12.1",
-	"nodemailer": "^4.0.1",
-	"path": "^0.12.7",
-	"pump": "^1.0.2",
-	"vinyl-source-stream": "^1.1.0"
-  },
-  "dependencies": {
-	"clean-css-cli": "^4.1.5",
-	"pug": "^2.0.0-rc.2"
-  }
+	"name": "portfolio_v2",
+	"version": "1.0.0",
+	"description": "Personal space of Eduardo Velasco",
+	"main": "server.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node server.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/velascoDev/portfolio_v2.git"
+	},
+	"author": "Eduardo J. Velasco",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/velascoDev/portfolio_v2/issues"
+	},
+	"engines": {
+		"node": "8.0.0",
+		"npm": "5.0.3"
+	},
+	"homepage": "https://github.com/velascoDev/portfolio_v2#readme",
+	"devDependencies": {
+		"babel-preset-es2015": "^6.24.1",
+		"babelify": "^7.3.0",
+		"body-parser": "^1.17.2",
+		"bootstrap": "^3.3.7",
+		"browserify": "^14.4.0",
+		"express": "^4.15.3",
+		"gulp": "^3.9.1",
+		"gulp-clean-css": "^3.4.2",
+		"gulp-import-css": "^0.1.3",
+		"gulp-livereload": "^3.8.1",
+		"gulp-minify": "^1.0.0",
+		"gulp-sass": "^3.1.0",
+		"gulp-uglify": "^3.0.0",
+		"jquery": "^3.2.1",
+		"jquery-ui": "^1.12.1",
+		"nodemailer": "^4.0.1",
+		"path": "^0.12.7",
+		"pump": "^1.0.2",
+		"vinyl-source-stream": "^1.1.0"
+	},
+	"dependencies": {
+		"clean-css-cli": "^4.1.5",
+		"pug": "^2.0.0-rc.2"
+	}
 }
